[package]
name = "atlas-transaction-decoder"
version = "0.1.1"
edition = "2024"
description = "Arkiv transaction decoder service for the Atlas Network."
repository = "https://github.com/atlas-chain/atlas-transaction-decoder"
publish = false

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
envy = "0.4"
# Arkiv `execute(Operation[])` calldata + signed-transaction envelope decoding
# and EIP-191 receipt recovery. Versions track atlas-reth's arkiv-node crate so
# the reference verification stays byte-for-byte compatible with the precompile.
alloy-primitives = { version = "1.6", features = ["k256", "serde"] }
alloy-sol-types = "1.6"
alloy-consensus = "2.0"
alloy-eips = "2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
